--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,6 +62,7 @@ main,
 nav,
 section {
   display: block;
+    min-height:100%;
 }
 
 body {
@@ -602,7 +603,7 @@ pre code {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 100%;
   }
 }
 
@@ -648,7 +649,7 @@ pre code {
   .container-md,
   .container-sm,
   .container {
-    max-width: 1140px;
+    max-width: 100%;
   }
 }
 
@@ -2021,7 +2022,7 @@ pre code {
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-  border-color: #95999c;
+  border-color: #95999с;
 }
 
 .table-hover .table-dark:hover {
@@ -3428,7 +3429,7 @@ input[type=button].btn-block {
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 10rem;
+  /*min-width: 10rem;*/
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
@@ -4438,6 +4439,8 @@ input[type=button].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+    font-size:18px;
+    font-weight:500;
 }
 
 .nav-link:hover,
@@ -6367,7 +6370,7 @@ a.close.disabled {
 
 @media (min-width: 1200px) {
   .modal-xl {
-    max-width: 1140px;
+    max-width: 100%;
   }
 }
 
@@ -10880,5 +10883,21 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+html, body{
+    min-height:100%;
+}
+
+body{
+    height:100vh;
+}
+
+#app{
+    min-height:100%;
+}
+
+.py-4{
+    min-height:100%;
 }
 
